# docker-ubuntu-c-17

./: README.md
addexternallib/: .gitignore  CMakeLists.txt
addexternallib/include/: sum.h
addexternallib/lib/: sum.cpp
addexternallib/src/: hello.cpp
client/: CMakeLists.txt  main.cpp
cplusplus/: CMakeLists.txt
cplusplus/src/: hello.cpp
